[gd_scene load_steps=21 format=4 uid="uid://d17vnfitnrv6"]

[ext_resource type="VideoStream" uid="uid://rtn48q4j7slb" path="res://Assets Jujutsu Kaisen/PrimeiraCena.ogv" id="1_dfn0s"]
[ext_resource type="Script" uid="uid://bja6fxargk2nb" path="res://Cenas/cena_1.gd" id="1_g1fjc"]
[ext_resource type="AudioStream" uid="uid://dls77n4oo0t5r" path="res://JUDAS x GOJO vs SUKUNA ï½œ EPIC BATTLE + ANIME VOICES [Jujutsu Kaisen MMV].mp3" id="2_owwqi"]
[ext_resource type="PackedScene" uid="uid://7jh5s0mw31cg" path="res://Cenas/player.tscn" id="4_aw1up"]
[ext_resource type="Texture2D" uid="uid://co3bdq1m4vg4f" path="res://Assets Super Mario Bros/Sprites/Brick.png" id="4_ptkc1"]
[ext_resource type="Texture2D" uid="uid://bh2i2pbd72n30" path="res://Assets Super Mario Bros/Sprites/GroundBlock.png" id="5_aw1up"]
[ext_resource type="Texture2D" uid="uid://62yaa8tsoa7i" path="res://Assets Jujutsu Kaisen/GroundBlockjujutsu.png" id="6_urbph"]
[ext_resource type="Texture2D" uid="uid://b2gf3ifn08371" path="res://Assets Jujutsu Kaisen/Carrojujutsu.png" id="7_dngqg"]
[ext_resource type="Texture2D" uid="uid://cvs5weyhtutdn" path="res://Assets Jujutsu Kaisen/Brickjujutsu.png" id="7_hutie"]
[ext_resource type="PackedScene" uid="uid://bo1a6isilwsgf" path="res://Cenas/Sukuna.tscn" id="8_dngqg"]
[ext_resource type="Texture2D" uid="uid://do48d8ioghgcp" path="res://Assets Jujutsu Kaisen/Poste.png" id="10_2shl0"]
[ext_resource type="VideoStream" uid="uid://d0tw374tv7riy" path="res://Assets Jujutsu Kaisen/Videos/Gojo200porcento.ogv" id="13_q7ebv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hutie"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dngqg"]
texture = ExtResource("4_ptkc1")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2shl0"]
texture = ExtResource("5_aw1up")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vai8y"]
texture = ExtResource("7_dngqg")
0:3/0 = 0
0:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hutie"]
texture = ExtResource("7_hutie")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q7ebv"]
texture = ExtResource("6_urbph")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qyd3o"]
texture = ExtResource("10_2shl0")
0:0/size_in_atlas = Vector2i(1, 6)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vai8y"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 5
physics_layer_0/physics_material = SubResource("PhysicsMaterial_hutie")
sources/0 = SubResource("TileSetAtlasSource_dngqg")
sources/1 = SubResource("TileSetAtlasSource_2shl0")
sources/4 = SubResource("TileSetAtlasSource_q7ebv")
sources/8 = SubResource("TileSetAtlasSource_qyd3o")
sources/10 = SubResource("TileSetAtlasSource_vai8y")
sources/11 = SubResource("TileSetAtlasSource_hutie")

[node name="Cena1" type="Node"]
script = ExtResource("1_g1fjc")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 2
tile_map_data = PackedByteArray("AADc/xMAAAAAAAAAAADd/xMAAAAAAAAAAADe/xMAAAAAAAAAAADf/xMAAAAAAAAAAADg/xMAAAAAAAAAAADh/xMAAAAAAAAAAADi/xMAAAAAAAAAAADj/xQAAAAAAAAAAADk/xQAAAAAAAAAAADl/xQAAAAAAAAAAADm/xQAAAAAAAAAAADn/xQAAAAAAAAAAADo/xQAAAAAAAAAAADp/xUAAAAAAAAAAADq/xUAAAAAAAAAAADr/xUAAAAAAAAAAADs/xUAAAAAAAAAAADt/xUAAAAAAAAAAADu/xUAAAAAAAAAAADv/xUAAAAAAAAAAADw/xUAAAAAAAAAAADx/xUAAAAAAAAAAADy/xUAAAAAAAAAAADy/xQAAAAAAAAAAADz/xQAAAAAAAAAAAD0/xQAAAAAAAAAAAD1/xQAAAAAAAAAAAD2/xQAAAAAAAAAAAD3/xQAAAAAAAAAAAD4/xQAAAAAAAAAAAD5/xQAAAAAAAAAAAD6/xQAAAAAAAAAAAD7/xQAAAAAAAAAAAD8/xQAAAAAAAAAAAD9/xQAAAAAAAAAAAD+/xQAAAAAAAAAAAD//xQAAAAAAAAAAAAAABQAAAAAAAAAAAABABQAAAAAAAAAAAACABQAAAAAAAAAAAADABQAAAAAAAAAAAAEABQAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAAAAAAAAAAKABMAAAAAAAAAAAALABMAAAAAAAAAAAAMABMAAAAAAAAAAAANABMAAAAAAAAAAAAOABMAAAAAAAAAAAAPABMAAAAAAAAAAAAQABMAAAAAAAAAAAARABMAAAAAAAAAAAASABMAAAAAAAAAAAATABMAAAAAAAAAAAAUABMAAAAAAAAAAAAVABMAAAAAAAAAAAAWABMAAAAAAAAAAAAXABMAAAAAAAAAAAAYABMAAAAAAAAAAAAZABMAAAAAAAAAAAAaABMAAAAAAAAAAAAbABMAAAAAAAAAAAAcABMAAAAAAAAAAAAdABMAAAAAAAAAAAAeABMAAAAAAAAAAAAfABMAAAAAAAAAAAAgABMAAAAAAAAAAAAhABMAAAAAAAAAAAAiABMAAAAAAAAAAAAjABMAAAAAAAAAAADj/xMAAAAAAAAAAADk/xMAAAAAAAAAAADl/xMAAAAAAAAAAADm/xMAAAAAAAAAAADn/xMAAAAAAAAAAADo/xMAAAAAAAAAAADp/xIAAAAAAAAAAADq/xIAAAAAAAAAAADr/xIAAAAAAAAAAADs/xIAAAAAAAAAAADt/xIAAAAAAAAAAADu/xIAAAAAAAAAAADv/xIAAAAAAAAAAADw/xIAAAAAAAAAAADx/xIAAAAAAAAAAADy/xIAAAAAAAAAAADz/xIAAAAAAAAAAAD0/xIAAAAAAAAAAAD1/xMAAAAAAAAAAAD2/xMAAAAAAAAAAAD3/xMAAAAAAAAAAAD4/xMAAAAAAAAAAAD5/xMAAAAAAAAAAAD6/xMAAAAAAAAAAAD7/xMAAAAAAAAAAAD8/xMAAAAAAAAAAAD9/xMAAAAAAAAAAAD+/xMAAAAAAAAAAAD//xMAAAAAAAAAAAAAABMAAAAAAAAAAAABABMAAAAAAAAAAAACABMAAAAAAAAAAAADABMAAAAAAAAAAAAEABMAAAAAAAAAAAAFABMAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAD7/xIAAAAAAAAAAAD6/xIAAAAAAAAAAAD5/xIAAAAAAAAAAAD4/xIAAAAAAAAAAAD3/xIAAAAAAAAAAAD2/xIAAAAAAAAAAAD1/xIAAAAAAAAAAADu/xMAAAAAAAAAAADt/xMAAAAAAAAAAADs/xMAAAAAAAAAAADr/xMAAAAAAAAAAADq/xMAAAAAAAAAAADp/xMAAAAAAAAAAADv/xMAAAAAAAAAAADw/xMAAAAAAAAAAADx/xMAAAAAAAAAAADy/xMAAAAAAAAAAADz/xMAAAAAAAAAAAD0/xMAAAAAAAAAAADx/xQAAAAAAAAAAADw/xQAAAAAAAAAAADv/xQAAAAAAAAAAADu/xQAAAAAAAAAAADt/xQAAAAAAAAAAADs/xQAAAAAAAAAAADr/xQAAAAAAAAAAADq/xQAAAAAAAAAAADp/xQAAAAAAAAAAAAKABIAAAAAAAAAAAAJABIAAAAAAAAAAAAIABIAAAAAAAAAAAD0/xEAAAAAAAAAAADz/xEAAAAAAAAAAADp/xEAAAAAAAAAAADo/xEAAAAAAAAAAADn/xEAAAAAAAAAAADn/xIAAAAAAAAAAADo/xIAAAAAAAAAAADb/xMAAAAAAAAAAADm/xEAAAAAAAAAAADl/xEAAAAAAAAAAADk/xEAAAAAAAAAAADk/xIAAAAAAAAAAADj/xIAAAAAAAAAAADl/xIAAAAAAAAAAADm/xIAAAAAAAAAAADc/xIAAAAAAAAAAADd/xIAAAAAAAAAAADe/xIAAAAAAAAAAADf/xIAAAAAAAAAAADg/xIAAAAAAAAAAADh/xIAAAAAAAAAAADi/xIAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABQAAAAAAAAAAAANABQAAAAAAAAAAAAOABQAAAAAAAAAAAAPABQAAAAAAAAAAAAQABQAAAAAAAAAAAARABQAAAAAAAAAAAASABQAAAAAAAAAAAATABQAAAAAAAAAAAAUABQAAAAAAAAAAAAVABQAAAAAAAAAAAAWABQAAAAAAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAbABQAAAAAAAAAAAAcABQAAAAAAAAAAAAdABQAAAAAAAAAAAAeABQAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAhABQAAAAAAAAAAAAiABQAAAAAAAAAAAAjABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_vai8y")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CharacterBody2D" parent="." instance=ExtResource("8_dngqg")]
position = Vector2(426, -20)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_owwqi")
volume_db = 2.01
autoplay = true

[node name="Player" parent="." instance=ExtResource("4_aw1up")]
position = Vector2(-417, -45)

[node name="HollowPurple" type="VideoStreamPlayer" parent="."]
offset_left = -580.0
offset_top = -325.0
offset_right = 572.0
offset_bottom = 323.0
stream = ExtResource("13_q7ebv")
volume_db = -80.0

[node name="Timer_Purple" type="Timer" parent="HollowPurple"]
wait_time = 5.0
one_shot = true

[node name="Aviso" type="Timer" parent="HollowPurple"]
wait_time = 4.0
one_shot = true

[node name="Inicial" type="VideoStreamPlayer" parent="."]
anchors_preset = -1
anchor_right = 0.014
offset_left = -583.0
offset_top = -320.0
offset_right = 556.872
offset_bottom = 331.0
stream = ExtResource("1_dfn0s")
volume_db = -80.0
autoplay = true

[connection signal="finished" from="HollowPurple" to="." method="_on_hollow_purple_finished"]
[connection signal="timeout" from="HollowPurple/Timer_Purple" to="." method="_on_timer_purple_timeout"]
[connection signal="timeout" from="HollowPurple/Aviso" to="." method="_on_aviso_timeout"]
[connection signal="finished" from="Inicial" to="." method="_on_inicial_finished"]
